--- a/clickygame/src/components/Card/style.css
+++ b/clickygame/src/components/Card/style.css
@@ -1,12 +1,12 @@
 .customCard {
   background: #fff;
-  border-radius: 2px;
-
+  border-radius: 20px !important;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
 }
 
 .img-container img{
   height:250px;
   object-fit: cover;
+  border-radius: 20px !important;
 }
 
