--- a/clickygame/src/components/Score/style.css
+++ b/clickygame/src/components/Score/style.css
@@ -1,8 +1,9 @@
-.title {
+.score {
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  text-decoration: underline;
-  color: #2A77AE;
+  text-decoration: none;
+  color: yellow;
   margin-bottom: 50px;
+  text-shadow: 2px 2px #1d1d1d21;
 }
