--- a/clickygame/src/components/Title/style.css
+++ b/clickygame/src/components/Title/style.css
@@ -1,8 +1,8 @@
 .title {
-  width: 100%;
   text-align: center;
   font-size: 3rem;
-  text-decoration: underline;
-  color: #2A77AE;
-  margin-bottom: 50px;
+  text-decoration: none !important;
+  color: white !important;
+  margin-top: 50px;
+  text-shadow: 2px 2px #1d1d1d21;
 }
